@@ -1,24 +1,0 @@
-#+TITLE: MU FIELDS
-#+MAN_CLASS_OPTIONS: :section-id "@SECTION_ID@" :date "@MAN_DATE@"
-
-
-* NAME
-
-*mu fields* - list all message fields
-
-* SYNOPSIS
-
-*mu [common-options] fields
-
-* DESCRIPTION
-
-*mu fields* is the *mu* command for showing a table of message fields and their
-properties.
-
-#+include: "common-options.inc" :minlevel 1
-
-#+include: "prefooter.inc" :minlevel 1
-
-* SEE ALSO
-
-*mu(1)*
