@@ -3,15 +3,21 @@
 
 * NAME
 
-~mu info~  - show information about the mu database
+~mu info~  - show information
 
 * SYNOPSIS
 
-*mu [common options] info*
+*mu [common options] info [<topic>]*
 
 * DESCRIPTION
 
-~mu info~ is the ~mu~ command for getting information about the mu database. Note
+~mu info~ is the ~mu~ command for getting information about various topics:
+
+- *common*: general mu build information
+- *store*: information about the message store
+- *fields*: table with all the query fields and flags
+
+about the mu database. Note
 that while running (e.g. ~mu4e~), some of the information may be slightly delayed
 due to database caching.
 
@@ -23,4 +29,4 @@ due to database caching.
 
 * SEE ALSO
 
-*maildir(5)*, *mu(1)*
+*mu(1)*
